--- a/_posts/2025-09-30-LLM_Works.md
+++ b/_posts/2025-09-30-LLM_Works.md
@@ -74,7 +74,7 @@ Since Ollama uses its own format (.gguf), the following steps are required to us
 
 ---
 
-💡 팁
+💡 Tips
 - When training LoRA, adjusting hyperparameters such as r, alpha, and dropout can have a significant impact on performance.
 - Ollama prefers quantized gguf models, so consider quantization options like q4KM or q5KM when converting. It seems like you should be able to fit the VRAM size of your GPU at home.
 
