--- a/_posts/2024-06-28-bdae.md
+++ b/_posts/2024-06-28-bdae.md
@@ -26,7 +26,7 @@ In addition, the fact that it can be integrated with various analysis engines ca
 
 This can improve performance by reducing the number of DB calls while writing backend programs in Python and R.<br>
 ***Note)*** <br>
-1.    ***BDAE*** was developed with inspiration from ***Oracle R Enterprise*** and was created solely using Oracle manuals.<br>
+1.    ***BDAE*** was developed with inspiration from ***Oracle R Enterprise*** and was created solely using Oracle manuals.
       However, it took a lot of time to develop through trial and error due to the lack of examples.<br>
 2.    ***BDAE*** enables your Python/R modules to run with parallelism like ***Oracle R Enterprise***. <br>
 3.    But, ***BDAE*** has no alogithm unlike **Oracle R Enterprise**, just tool for AI (Machine Learning). <br>
@@ -95,19 +95,20 @@ def image_to_html():
       os.remove(tmp_file_name)
    return html_str
 
-def describe(housing):
+# start function : df_house supplied by BDAE automatically.
+def describe(df_housing):
    # 0) Prepare Output
    tupleStart = {'subject': [ 'General ML' ] }
    pdf = pd.DataFrame(tupleStart)
 
    # 1) Historam
-   housing.hist(bins=50, figsize=(20,15))
+   df_housing.hist(bins=50, figsize=(20,15))
    a = image_to_html()
    pdf = make_output(pdf, 'Histogram', a)
 
    # 2) Scatter Plot
-   housing.plot(kind="scatter", x="LONGITUDE", y="LATITUDE", alpha=0.4,
-             s=housing["POPULATION"]/100, label="POPULATION", figsize=(10,7),
+   df_housing.plot(kind="scatter", x="LONGITUDE", y="LATITUDE", alpha=0.4,
+             s=df_housing["POPULATION"]/100, label="POPULATION", figsize=(10,7),
              c="MEDIAN_HOUSE_VALUE", cmap=plt.get_cmap("jet"), colorbar=True,
              sharex=False)
    plt.legend()
