--- a/_posts/2024-06-28-bdae.md
+++ b/_posts/2024-06-28-bdae.md
@@ -38,10 +38,14 @@ This can improve performance by reducing the number of DB calls while writing ba
 ## ***BDAE*** Table Functions
 BDAE has special SQL statements related to Oracle In-Database and provides table functions for four types of analysis for Python and R respectively.<br>
 
-1. apEval(SQL_args, SQL_output, R_script_name/PythonModuleName:start_function)
-2. apTableEval(SQL_input, SQL_args, SQL_output, R_script_name/PythonModuleName:start_function)
-3. apRowEval(SQL_input, SQL_args, SQL_output, No_of_Rows, R_script_name/PythonModuleName:start_function)
-4. apGroupEval(SQL_input, SQL_args, SQL_output, GroupColumns, R_script_name/PythonModuleName:start_function)
+1. apEval(SQL_args, SQL_output, PythonModuleName:start_function)
+2. apTableEval(SQL_input, SQL_args, SQL_output, PythonModuleName:start_function)
+3. apRowEval(SQL_input, SQL_args, SQL_output, No_of_Rows, PythonModuleName:start_function)
+4. apGroupEval(SQL_input, SQL_args, SQL_output, GroupColumns, PythonModuleName:start_function)
+5. asEval(SQL_args, SQL_output, R_script_name)
+6. asTableEval(SQL_input, SQL_args, SQL_output, R_script_name)
+7. asRowEval(SQL_input, SQL_args, SQL_output, No_of_Rows, R_script_name)
+8. asGroupEval(SQL_input, SQL_args, SQL_output, GroupColumns, R_script_name)
 
 apEval() is for simple testing without input data, while the rest all have input data. Each can be used for its own purpose, and the R and Python analysis modules are reusable. <br>
 The most commonly used ones are apTableEval() and apGroupEval(), and the difference between the two is that apGroupEval has Group By built-in, allowing for parallel distributed processing. <br>
