--- a/_posts/2025-09-30-LLM_Works.md
+++ b/_posts/2025-09-30-LLM_Works.md
@@ -250,14 +250,57 @@ print(lora_text)
 print("==============================")
 ```
 
-If you accept above results, run belows.
+### Make llama.cpp GGUF format model
+In case of Unsloth, 
+```
+cd ../llama.cpp
+rm -f ./llama2-local.gguf ./llama2-local-q8.gguf
+python convert_hf_to_gguf.py /home/llm/unsloth/llama-2-7b-bnb-fine --outfile ./llama2-local.gguf --outtype f16
+./build/bin/llama-quantize ./llama2-local.gguf llama2-local-q8.gguf q8_0
+./build/bin/llama-server  -m ./llama2-local-q8.gguf --port 8080 --host 0.0.0.0 --threads $(nproc) --n-gpu-layers 35
+```
+
 
 ### Ollama model
+If you accept above results, run belows.
+#### Modelfile
 ```
-echo 'FROM ./gemma-2-9b-it-Q6_K_L.gguf' > Modelfile
-ollama create gemma-2-9b-it -f Modelfile
+FROM ./llama2-local-q8.gguf
+
+# 시스템 프롬프트 — 모델이 assistant로 일관되게 대답하도록 유도
+SYSTEM """
+You are a helpful and knowledgeable assistant.
+Answer the user's question directly and do not repeat the user's input.
+If the question is unclear, ask for clarification.
+"""
+
+# Ollama가 자동으로 prompt 형식을 구성할 수 있도록 지정
+TEMPLATE """
+<|begin_of_text|><|start_header_id|>system<|end_header_id|>
+{{ .System }}
+
+<|start_header_id|>user<|end_header_id|>
+{{ .Prompt }}
+
+<|start_header_id|>assistant<|end_header_id|>
+"""
+
+# 이 부분이 중요: 모델이 EOS를 인식하고 출력을 멈추게 함
+PARAMETER stop "<|end_of_text|>"
+PARAMETER stop "<|eot_id|>"
+
+# 필요시 온도, 토큰 제한도 추가 가능
+PARAMETER temperature 0.7
+PARAMETER num_predict 1024
+```
+
+#### Modelfile
+Make ollama style model.
+
+```
+ollama create llama2-local-q8 -f Modelfile
 ollama list
 
-ollama server
-ollama run gemma-2-9b-it
+ollama serve
+ollama run llama2-local-q8
 ```
