--- a/_posts/2025-09-30-LLM_Works.md
+++ b/_posts/2025-09-30-LLM_Works.md
@@ -304,3 +304,108 @@ ollama list
 ollama serve
 ollama run llama2-local-q8
 ```
+
+### RAG, Open Web UI
+```
+from flask import Flask, request, jsonify
+from langchain_chroma import Chroma
+from langchain_huggingface import HuggingFaceEmbeddings
+from langchain.chains import RetrievalQA
+from langchain.prompts import PromptTemplate
+from flask_cors import CORS
+import logging
+import pandas as pd
+from tabulate import tabulate
+
+logging.basicConfig(
+    level=logging.INFO,
+    format="%(asctime)s - %(levelname)s - %(message)s"
+)
+
+app = Flask(__name__)
+CORS(app)
+
+llm = Ollama(model="llama3")
+
+# 임베딩 모델 설정
+embeddings = HuggingFaceEmbeddings(model_name="BAAI/bge-code-v1", model_kwargs={"device": "cuda"})
+
+# 벡터 DB 로드
+db = Chroma(persist_directory="./chroma_db", embedding_function=embeddings)
+
+prompt_template = PromptTemplate(
+    input_variables=["context", "question"],
+    template=(
+        "다음 문맥을 참고하여 질문에 답하세요.\n\n"
+        "문맥:\n{context}\n\n"
+        "질문:\n{question}\n\n"
+        "답변:"
+    )
+)
+
+qa_chain = RetrievalQA.from_chain_type(
+    llm=llm,
+    retriever=db.as_retriever(),
+    chain_type="stuff",
+    chain_type_kwargs={"prompt": prompt_template}
+)
+
+@app.route("/query", methods=["POST"])
+def rag():
+    logging.info('POST(/query) arrived !')
+    data = request.get_json()
+
+    query = data.get("query", "")
+    if not query:
+        return jsonify({"error": "질문이 필요합니다."}), 400
+
+    logging.info(f"query : {query}")
+
+    answer = qa_chain.run(query)
+
+    logging.info(f"Answer : {answer}")
+    return jsonify({"answer": answer})
+
+if __name__ == "__main__":
+    app.run(debug=True, port=5000)
+```
+
+#### MCP
+```
+from mcp.server.fastmcp import FastMCP
+import logging
+import requests
+
+logging.basicConfig(
+    level=logging.INFO,
+    format="%(asctime)s - %(levelname)s - %(message)s"
+)
+
+mcp = FastMCP("chroma_rag")
+
+@mcp.tool()
+async def ask_chroma(query: str) -> str:
+    global qa_chain, initialized
+    try:
+        logging.info(f"query received: {query}")
+        response = requests.post(
+            "http://localhost:5000/query",
+            json={"query": query},
+            timeout=10
+        )
+        logging.info(f"response status: {response.status_code}")
+        logging.info(f"response all data : {str(response)}")
+        data = response.json()
+        logging.info(f"==========================")
+        logging.info(f"response data : {data}")
+        res_data = data.get("answer", "답변을 가져올 수 없습니다.")
+        res_format = type(res_data)
+        logging.info(f"return data : {res_data}, format : {res_format}")
+        return res_data
+        #return data
+    except Exception as e:
+        return f"오류 발생: {str(e)}"
+
+if __name__ == "__main__":
+    mcp.run()
+```
