--- a/_posts/2025-01-25-doc_gen.md
+++ b/_posts/2025-01-25-doc_gen.md
@@ -6,16 +6,27 @@ category: Jekyll
 layout: post
 ---
 
-## Spire-Doc
+## ✅<span style="color:#034299"> 개요
 
+PDF 문서에서 데이터를 추출하는데는 확실히 제한적이다.  특히 표 형태에서는 매우 취약하며 보안 관련 배경 문자열(Conferdential) 이
+있을 경우에는 정말 엉망진창의 추출이 된다. <br>
+
+반면 MS Word 문서가 만약 서식이 지켜지는 방식으로 작성되었다면 이를 Reverse 해서 데이터를 추출하기 매우 용이하며,
+또한 DB 를 통해서 MS Word 문서를 서식에 의해 만들고 이를 PDF 포맷이나 HTML, Mark Down 형태로 만드는 것은 거의 완벽하다.
+<br>
+특히 기본적인 Template Word 문서가 제공되었을 때, 우리는 Python 상용 패키지인 Spire-Doc 을 가지고 문서를 생성할 수 있고
+복잡현 표의 형태도 자유롭게 Python 으로 손쉽게 만들 수 있다.
+
+이때 BDAE (Big Data Aanlysis Enabler) 를 사용한다면 백앤드는 이 SQL 문만 호출하면 되기 때문에 매우 효과적이라고 할 수 있다.
+특히 복잡한 형태의 표가 섞여 있는 경우 효과적이며 체계적이라고 볼 수 있다.<br>
 
 ## Using BDAE
 
 ```
 SELECT * FROM table(apTableEval(
-    cursor(SELECT * FROM WordTemplateDB WHERE ID = 'AAATemplate'),
+    cursor(SELECT * FROM WordTemplateDB WHERE ID = 'MOSTemplate' AND VERSION='1.1.0'),
     cursor(SELECT 'HTML' AS OUTPUT FROM dual),
-    'HTML',
+    'MS-WORD',
     'WORD_GEN_01:start'
 ))
 ```
