--- a/_posts/2025-01-25-doc_gen.md
+++ b/_posts/2025-01-25-doc_gen.md
@@ -16,11 +16,15 @@ PDF 문서에서 데이터를 추출하는데는 확실히 제한적이다.  특
 반면 MS Word 문서가 만약 서식이 지켜지는 방식으로 작성되었다면 이를 Reverse 해서 데이터를 추출하기 매우 용이하며,
 또한 DB 를 통해서 MS Word 문서를 서식에 의해 만들고 이를 PDF 포맷이나 HTML, Mark Down 형태로 만드는 것은 거의 완벽하다.
 <br>
+표에 관해서는 MS Word 를 가지고 만들 때 사용하는 Merge, 줄 맞춤 등을 코드화 하여 생성하거나, 이미 되어 있는 경우에도 거의 완벽하게 각 셀에
+대한 원본 데이터 추출이 가능하다.<br>
+
 특히 기본적인 Template Word 문서가 제공되었을 때, 우리는 Python 상용 패키지인 Spire-Doc 을 가지고 문서를 생성할 수 있고
 복잡현 표의 형태도 자유롭게 Python 으로 손쉽게 만들 수 있다.
 
 이때 BDAE (Big Data Aanlysis Enabler) 를 사용한다면 백앤드는 이 SQL 문만 호출하면 되기 때문에 매우 효과적이라고 할 수 있다.
 특히 복잡한 형태의 표가 섞여 있는 경우 효과적이며 체계적이라고 볼 수 있다.<br>
+
 
 
 ## Using BDAE
