--- a/_posts/2025-01-25-doc_gen.md
+++ b/_posts/2025-01-25-doc_gen.md
@@ -27,13 +27,23 @@ PDF 문서에서 데이터를 추출하는데는 확실히 제한적이다.  특
 
 
 
-## Using BDAE
-
+## ✅<span style="color:#034299"> Using BDAE
+아래 BDAE SQL 문을 살펴 보면 먼저 MS Word 템플릿을 지정하고, Python 에서 만들어 낼 여러 테이블의 Where 절에 해당 되는 값들을
+넘겨 주는 두 번째 cursor 를 만든다. 리턴 포맷은 MS-WORD, HTML, PDF 등으로 설정할 수 있고 가장 중요한 Python 모듈과 함수를 지정하면 된다.<br>
+이 SQL 문을 호출하면 MS-WORD, PDF 는 BLOB 형태로 넘어 오며, HTML, MARKDOWN 의 경우는 CLOB 형태로 SQL 결과를 받게 된다.
 ```
 SELECT * FROM table(apTableEval(
-    cursor(SELECT * FROM WordTemplateDB WHERE ID = 'MOSTemplate' AND VERSION='1.1.0'),
-    cursor(SELECT 'HTML' AS OUTPUT FROM dual),
+    cursor(SELECT * FROM WordTemplateDB WHERE ID = 'MOSTemplate' AND VERSION='1.1.0'), --
+    cursor(SELECT 'PRD_01' AS PRODUCT_ID, 'RECIPE_01' AS RECIPE_ID, .. FROM dual),
     'MS-WORD',
     'WORD_GEN_01:start'
 ))
 ```
+
+## ✅<span style="color:#034299"> 후기
+예전에 프로젝트를 할 때 이런 것들에 대한 프로토타입을 하였었다.  사람들은 Report 툴을 이야기 했지만 그것은 맞지 않는다고 생각했다.<br>
+지나간 이야기이지만, 다소 안타까웠다.  대기업 프로젝트를 하면서 그들의 능력, 오만함을 또 한번 경험했고 .. 참 안타까운 일이다. <br><br>
+굳이 BDAE 를 사용하지 않더라도 FastAPI 나 Flask 정도만 사용해도 이런 일은 쉽게 할 수 있다. <br>
+
+
+
