--- a/_posts/2025-01-25-doc_gen.md
+++ b/_posts/2025-01-25-doc_gen.md
@@ -41,9 +41,9 @@ SELECT * FROM table(apTableEval(
 ```
 
 ## ✅<span style="color:#034299"> 후기
-예전에 프로젝트를 할 때 이런 것들에 대한 프로토타입을 하였었다.  사람들은 Report 툴을 이야기 했지만 그것은 맞지 않는다고 생각했다.<br>
-지나간 이야기이지만, 다소 안타까웠다.  대기업 프로젝트를 하면서 그들의 능력, 오만함을 또 한번 경험했고 .. 참 안타까운 일이다. <br><br>
-굳이 BDAE 를 사용하지 않더라도 FastAPI 나 Flask 정도만 사용해도 이런 일은 쉽게 할 수 있다. <br>
+예전에 프로젝트를 할 때 이런 것들에 대한 프로토타입을 하였었다.  사람들은 Report 툴을 이야기 했었지만 전혀 매칭이 되지 않았다.
+BDAE 는 백앤드를 매우 간단하게 만든다.  SQL 문 호출만 하면 되기 때문이다.  이기종 언어 (Python, R)를 백앤드에서는 SQL 문 형태로
+호출하기 때문에 복잡성을 단순하게 만든다. <br>
 
 
 
