--- a/_posts/2025-01-25-doc_gen.md
+++ b/_posts/2025-01-25-doc_gen.md
@@ -41,9 +41,11 @@ SELECT * FROM table(apTableEval(
 ```
 
 ## ✅<span style="color:#034299"> 후기
-예전에 프로젝트를 할 때 이런 것들에 대한 프로토타입을 하였었다.  사람들은 Report 툴을 이야기 했었지만 전혀 매칭이 되지 않았다.
-BDAE 는 백앤드를 매우 간단하게 만든다.  SQL 문 호출만 하면 되기 때문이다.  이기종 언어 (Python, R)를 백앤드에서는 SQL 문 형태로
-호출하기 때문에 복잡성을 단순하게 만든다. <br>
+예전에 프로젝트를 할 때 이런 것들에 대한 프로토타입을 하였었다.  Report 툴은 Label 이 일정했을 때 가능하지만, 그 당시의 표는
+비정형 표였으며, 상단 또는 좌측 라벨을 기준으로 레코드를 뿌리는 형태가 아니었다. 따라서 표의 셀(Cell) 에 대한 정보를 가지고 있어야 했다.
+<br>
+표를 만들 때 기준이 되는 테이블은 그 테이블의 구조 및 셀의 형식, 병합 셀 정보, 폰트 등의 정보와 매칭되는 여러개의 테이블과의 매핑 정보가
+존재해야 할 것이다. <br>
 
 
 
