--- a/_posts/2024-06-28-bdae.md
+++ b/_posts/2024-06-28-bdae.md
@@ -6,7 +6,7 @@ category: Jekyll
 layout: post
 ---
 
-## ✅<span style="color:#034299">About BDAE(Big Data Analysis Enabler, AI Enabler) for Oracle Database</span>
+## <span style="color:#034299">✅ About BDAE(Big Data Analysis Enabler, AI Enabler) for Oracle Database</span>
 
 ***Big Data Analysis Enabler(BDAE)*** enables parallel processing of various AI-related R and Python modules without data movement based on Oracle Instance(s).
 Because it implements the ***Oracle Data Cartridge Interface***, it is not limited to a specific schema and supports ***Dynamic SQL***.<br>
@@ -35,7 +35,7 @@ This can improve performance by reducing the number of DB calls while writing ba
       you can store and run Python/R scripts in the database through either an Python/R interface or a SQL interface or both. <br>
       You can use the results of Python/R scripts in SQL-enabled tools for structured data, Python/R objects, and images.
 
-## 📌<span style="color:#034299"> ***BDAE*** Table Functions
+## <span style="color:#034299">📌 ***BDAE*** Table Functions
 BDAE has special SQL statements related to Oracle In-Database and provides table functions for four types of analysis for Python and R respectively.<br>
 
 1. apEval(SQL_args, SQL_output, PythonModuleName:start_function)
