--- a/_posts/2024-06-28-bdae.md
+++ b/_posts/2024-06-28-bdae.md
@@ -6,7 +6,7 @@ category: Jekyll
 layout: post
 ---
 
-## <span style="color:#034299">✅ About BDAE(Big Data Analysis Enabler, AI Enabler) for Oracle Database</span>
+## ✅ About BDAE(Big Data Analysis Enabler, AI Enabler) for Oracle Database
 
 ***Big Data Analysis Enabler(BDAE)*** enables parallel processing of various AI-related R and Python modules without data movement based on Oracle Instance(s).
 Because it implements the ***Oracle Data Cartridge Interface***, it is not limited to a specific schema and supports ***Dynamic SQL***.<br>
@@ -62,7 +62,7 @@ The most commonly used ones are apTableEval() and apGroupEval(), and the differe
 6. GroupColumns : applies only to apGroupEval() and is equivalent to inserting Group By in a SQL statement into the apTableEval() function. In other words, apGroupEval() defines that parallel distributed processing is performed based on these columns, and each column name can be written as col1, col2, col3, .. Therefore, analysts do not need to consider parallel distributed processing.
 
 
-## ✅<span style="color:#034299">How To run (3 Steps to Run !)</span>
+## ✅ How To run (3 Steps to Run !)
 1. Register your Python/R model in the designated Oracle Database's table or save file in PYTHONPATH directory.
 2. Register the SQL to bind source data and your model.
 3. Run the SQL and get the results.  you can get results any tools capable of connecting Oracle Database.
@@ -156,7 +156,7 @@ Like General SQL Queries' results, BDAE's results are the same.
 
 
 ---------------------------------------
-## ✅<span style="color:#034299">Installation</span>
+## ✅ Installation
 
 Oracle Database is provided as Docker, and installation of Python and R with Anaconda has also become very convenient.<br>
 Therefore, BDAE installation is very quick and can be installed within 5 minutes.<br><br>
@@ -172,13 +172,13 @@ If you have a GPU, you can enter --gpus all --ipc=host as shown below. Use --ipc
 Please send me the mail if you want to test. (gracesjy@naver.com)<br>
 
 ---------------------------------------
-## ✅<span style="color:#034299">Summary Document(Manual)</span>
+## ✅ Summary Document(Manual)
 [Big Data Analysis Enabler Summary(Korean)](https://github.com/gracesjy/hp/blob/master/assets/BDAE_Manual_Ko.pdf)<br>
 [Big Data Analysis Enabler Summary(English)](https://github.com/gracesjy/hp/blob/master/assets/BDAE_Manual.pdf)<br>
-## ✅<span style="color:#034299">More Information</span>
+## ✅ More Information
 [Big Data Analysis Enabler GitHub](https://github.com/gracesjy/bdae)
 
-## ✅<span style="color:#034299">Where to use ..</span>
+## ✅ Where to use ..
 1. Improved and simplified Backend performance
 Instead of the backend calling SQL statements to Oracle Database multiple times, BDAE is used to obtain the same result in a single SQL statement call.
 2. Unlike BigQuery on GCP, you can create models and perform inferences by tuning data and deciding on algorithms yourself. ( Cons and Pros )
@@ -189,7 +189,7 @@ Instead of the backend calling SQL statements to Oracle Database multiple times,
 7. Maximize the stability and performance of Oracle Database, focus solely on analysis itself, and eliminate complexity.
 
 
-## ✅<span style="color:#034299">Examples</span>
+## ✅ Examples
 
 ### Example #1 (YOLO Aquarium Training)
 Aquarium Object Detection Training <br>
