--- a/_posts/2024-07-02-opcua.md
+++ b/_posts/2024-07-02-opcua.md
@@ -6,7 +6,7 @@ category: Jekyll
 layout: post
 ---
 
-## <span style="color:#220580">SW Module Configuration</span>
+## ✅ SW Module Configuration
 
 This product aims to be mounted in an Embedded BOX of the type below.
 The Eclipse Milo OPC-UA (Java) project was initially used, and as detailed implementation of the Alarm/Event part was required, 
@@ -16,7 +16,7 @@ It uses its own framework based on Pure Java, and uses commercial products for t
 
 ![OPCUA02.png](../assets/OPCUA01.png)
 
-## <span style="color:#220580">OPC-UA Built-In Embedded BOX</span>
+## ✅ OPC-UA Built-In Embedded BOX
 OPC-UA Server can have multi-session with equipment such as PLC and can communicate with products from most PLC companies. 
 OPC-UA Manager is web-based and supports the OPC-UA protocol in the form of REST API.<br>
 Once the PLC address map is provided, it can be immediately converted to XML and brought up to speed within an hour or two.<br>
@@ -24,7 +24,7 @@ It can also be tested by providing the image created with Docker, and can be sta
 
 <img src="../assets/OPCUA02.png">
 
-## <span style="color:#220580">Supported PLCs</span>
+## ✅ Supported PLCs
 The supported PLCs are as follows:
 <img src="../assets/SupportedPLCs.png">
 ------------------------------------------------
@@ -43,41 +43,41 @@ The supported PLCs are as follows:
 13. ...
 <br>
 
-## <span style="color:#220580">Address Space</span>
+## ✅ Address Space
 An address space specifies the building blocks for exposing instances and type definitions.
 When the OPC-UA server starts, it must perform address space configuration based on the defined environment file (opcua-map.xml).   
 This configuration varies from device to device and can be configured by the manufacturer as needed and is not set in stone. 
 Rather, it is necessary to classify and bind many parameters related to the device.
 
 
-## <span style="color:#220580">Data Dictionary</span>
+## ✅ Data Dictionary
 Structures such as Recipe are defined separately and simplified. This part is a bit tricky because it connects with everything.
 
 ![OPCUA_DataDictionary.png](../assets/OPCUA_DataDictionary.png)
 
-## <span style="color:#220580">Data Access</span>
+## ✅ Data Access
 This function puts a lot of load on the BOX. This is because of real-time communication with the actual equipment, 
 and the more the number called "Tag", the more load is given to the OS of the BOX.
 (performance : 3,000 tags under 200ms with JAVA GC)
 
 ![OPCUA_DA.png](../assets/OPCUA_DA.png)
 
-## <span style="color:#220580">Alarm and Conditions</span>
+## ✅ Alarm and Conditions
 As a OPC-UA Client, UaExpert 3 Tabs, Events (including ALARMs), ALARMs, Event History (including ALARMs History)
 
 ![OPCUA_ALARM_AND_CONDITIONS.png](../assets/OPCUA_ALARM_AND_CONDITIONS.png)
 
-## <span style="color:#220580">Event/Alarm History</span>
+## ✅ Event/Alarm History
 Using Event History Tab in UaExpert, You can see all alarms and events.   
 OPC-UA servers contains this history in memory. (max limit : 10,000 - depends on configurations, and rotational memory management.)
 
 ![OPCUA_HISTORY.png](../assets/OPCUA_HISTORY.png)
 
-## <span style="color:#220580">Historical Access</span>
+## ✅ Historical Access
 
 ![OPCUA_HISTORYACCESS.png](../assets/OPCUA_HISTORYACCESS.png)
 
-## <span style="color:#220580">OPC-UA Manager for REST API Client</span>
+## ✅ OPC-UA Manager for REST API Client
 OPC-UA Manager is provided for OPC-UA monitoring and configuration, and is based on Spring Boot + Vue.js, <br>
 and has an OAth2 authentication system. <br> 
 It provides a REST API and is intended for clients without an OPC-UA Stack.<br>
@@ -121,11 +121,11 @@ data_response = requests.post(data_url, data=json.dumps(opcnodes), headers=heade
 print (data_response.json())
 ```
 
-## OPC-UA, Monitoring using Grafana
+## ✅ OPC-UA, Monitoring using Grafana
 Utilizing the datasource plugin framework, this projects allows you to access data from OPC UA servers directly from Grafana.
 ![OPCUA_HISTORYACCESS.png](../assets/GRAFANA.png)
 
-## Grafana + Telegraf + WS(WebSocket)
+## ✅ Grafana + Telegraf + WS(WebSocket)
 Grafana Plugin Build for OPC-UA, dotnet-sdk needed.
 ```
 git clone https://github.com/grafana/opcua-datasource.git
@@ -154,7 +154,7 @@ allow_loading_unsigned_plugins = grafana-opcua-datasource
 
 sudo cp opcua-datasource /var/lib/grafana/plugins/grafana-opcua-datasource
 ```
-## How to make Telegraf access to OPC-UA with WebSocket
+## ✅ How to make Telegraf access to OPC-UA with WebSocket
 First of all, you must get Token from Grafana Administrator > Users and access > Service accounts > Add service account. <br>
 You must modify Telegraf.conf as followings, replaced Bear <your token> by your real token without <> characters.<br>
 ```
@@ -166,7 +166,7 @@ flush_interval = "1s"
 Authorization = "Bearer <your token>"
 ```
 
-## Grafana session settings.
+## ✅ Grafana session settings.
 You must edit grafana.ini as followings, 7d means 7 days.
 ```
 [auth]
@@ -174,7 +174,7 @@ login_maximum_inactive_lifetime_duration = 7d
 login_maximum_lifetime_duration = 30d
 token_rotation_interval_minutes = 1440
 ```
-## Telegraf OPC-UA
+## ✅ Telegraf OPC-UA
 First make key.pem, cert.pem files with openssl.
 ```
 openssl genrsa -out key.pem 2048
@@ -224,7 +224,7 @@ edit telegraf.conf as followings. <br>
     ]
 ```
 
-### Python OPC-UA client
+## ✅ Python OPC-UA client
 https://github.com/FreeOpcUa/python-opcua/tree/master/examples
 
 ```
