--- a/_posts/2025-01-25-doc_gen.md
+++ b/_posts/2025-01-25-doc_gen.md
@@ -8,7 +8,7 @@ layout: post
 
 
 
-## ✅<span style="color:#034299"> 개요
+## ✅ 개요
 
 PDF 문서에서 데이터를 추출하는데는 확실히 제한적이다.  특히 표 형태에서는 매우 취약하며 보안 관련 배경 문자열(Conferdential) 이
 있을 경우에는 정말 엉망진창의 추출이 된다. <br>
@@ -27,7 +27,7 @@ PDF 문서에서 데이터를 추출하는데는 확실히 제한적이다.  특
 
 
 
-## ✅<span style="color:#034299"> Using BDAE
+## ✅ Using BDAE
 아래 BDAE SQL 문을 살펴 보면 먼저 MS Word 템플릿을 지정하고, Python 에서 만들어 낼 여러 테이블의 Where 절에 해당 되는 값들을
 넘겨 주는 두 번째 cursor 를 만든다. 리턴 포맷은 MS-WORD, HTML, PDF 등으로 설정할 수 있고 가장 중요한 Python 모듈과 함수를 지정하면 된다.<br>
 이 SQL 문을 호출하면 MS-WORD, PDF 는 BLOB 형태로 넘어 오며, HTML, MARKDOWN 의 경우는 CLOB 형태로 SQL 결과를 받게 된다.
@@ -40,7 +40,7 @@ SELECT * FROM table(apTableEval(
 ))
 ```
 
-## ✅<span style="color:#034299"> 후기
+## ✅ 후기
 예전에 프로젝트를 할 때 이런 것들에 대한 프로토타입을 하였었다.  Report 툴은 Label 이 일정했을 때 가능하지만, 그 당시의 표는
 비정형 표였으며, 상단 또는 좌측 라벨을 기준으로 레코드를 뿌리는 형태가 아니었다. 따라서 표의 셀(Cell) 에 대한 정보를 가지고 있어야 했다.
 <br>
