--- a/_posts/2025-07-20-llama.md
+++ b/_posts/2025-07-20-llama.md
@@ -5,14 +5,14 @@ date: 2025-07-20
 category: Jekyll
 layout: post
 ---
-## Why ?
+## ✅ Why ?
 While commercial tools like ChatGPT and Copilot offer significant benefits, security concerns, especially when they contain confidential information, make them unsafe to use. Even with the RAG threat...<br>
 For fine tuning, llama.cpp is needed to quantize or transform the model.<br>
 This is especially true when using the GPU on your desktop at home rather than the GPU in CoLab.<br>
 
-## Ubuntu 22.04 LTS
+## ✅ On Ubuntu 22.04 LTS
 
-## Preparation
+## ✅ Preparation
 ```
 ### ubuntu update error
 sudo rm -rf /var/lib/apt/lists/*
@@ -57,7 +57,7 @@ nvidia-smi
 ```
 
 
-## LLama build
+## ✅ LLama build
 ```
 git clone https://github.com/ggerganov/llama.cpp.git
 cd llama.cpp
@@ -72,7 +72,7 @@ cd ..
 
 ```
 
-## RUN LLama
+## ✅ RUN LLama
 ```
 ./build/bin/llama-server   -m ./models/Meta-Llama-3.1-8B-Instruct-Q4_K_M.gguf   --port 8080   --host 0.0.0.0   --threads $(nproc)   --n-gpu-layers 35
 ```
