--- a/_posts/2025-09-30-LLM_Works.md
+++ b/_posts/2025-09-30-LLM_Works.md
@@ -170,7 +170,7 @@ model.save_pretrained("./lora-llama3")
 tokenizer.save_pretrained("./lora-llama3")
 ```
 In case of device_map error -> .to("cuda")
-### ✅ Merge
+## ✅ Merge
 
 ```
 from peft import PeftModel
@@ -194,7 +194,7 @@ merged_model.save_pretrained("./merged-llama3", safe_serialization=False)
 tokenizer = AutoTokenizer.from_pretrained("./Meta-Llama-3-8B-Instruct")
 tokenizer.save_pretrained("./merged-llama3")
 ```
-### ✅ Verify Fine Tunning Model
+## ✅ Verify Fine Tunning Model
 
 ```
 import torch
@@ -250,7 +250,7 @@ print(lora_text)
 print("==============================")
 ```
 
-### ✅ Make llama.cpp GGUF format model
+## ✅ Make llama.cpp GGUF format model
 In case of Unsloth, 
 ```
 cd ../llama.cpp
@@ -261,9 +261,9 @@ python convert_hf_to_gguf.py /home/llm/unsloth/llama-2-7b-bnb-fine --outfile ./l
 ```
 
 
-### ✅ Ollama model
+## ✅ Ollama model
 If you accept above results, run belows.
-#### 📌 Modelfile
+### 📌 Modelfile
 ```
 FROM ./llama2-local-q8.gguf
 
@@ -294,7 +294,7 @@ PARAMETER temperature 0.7
 PARAMETER num_predict 1024
 ```
 
-#### 📌 Modelfile
+### 📌 Make Ollama Model
 Make ollama style model.
 
 ```
@@ -305,7 +305,7 @@ ollama serve
 ollama run llama2-local-q8
 ```
 
-### ✅ RAG, Open Web UI
+## ✅ RAG, Open Web UI
 ```
 from flask import Flask, request, jsonify
 from langchain_chroma import Chroma
@@ -370,7 +370,7 @@ if __name__ == "__main__":
     app.run(debug=True, port=5000)
 ```
 
-#### 📌 MCP
+### 📌 MCP
 ```
 from mcp.server.fastmcp import FastMCP
 import logging
