--- a/_posts/2024-07-02-opcua.md
+++ b/_posts/2024-07-02-opcua.md
@@ -251,4 +251,16 @@ servicelevel_node.set_value(ua.Variant(99, ua.VariantType.Int16))
 client.disconnect()
 ```
 
+## ✅ Influx Database(Version 2)
+InfluxDB is a **time-series database (TSDB)**, an open-source database optimized for fast and efficient storage and retrieval of data over time. It is used for real-time data management in various fields, including operational monitoring, Internet of Things (IoT) sensor data, and application metrics. Its NoSQL-based, schemaless design makes it ideal for this purpose. 
 
+![influxdb2.png](../assets/influxdb2.png)
+
+```
+from(bucket: "mybucket")
+  |> range(start: v.timeRangeStart, stop: v.timeRangeStop)
+  |> filter(fn: (r) => r["_measurement"] == "opcua")
+  |> filter(fn: (r) => r["_field"] == "AbsTemperature" or r["_field"] == "Temperature")
+  |> aggregateWindow(every: v.windowPeriod, fn: mean, createEmpty: false)
+  |> yield(name: "mean")
+```
