--- a/_posts/2024-07-02-opcua.md
+++ b/_posts/2024-07-02-opcua.md
@@ -252,7 +252,9 @@ client.disconnect()
 ```
 
 ## ✅ Influx Database(Version 2)
-InfluxDB is a **time-series database (TSDB)**, an open-source database optimized for fast and efficient storage and retrieval of data over time. It is used for real-time data management in various fields, including operational monitoring, Internet of Things (IoT) sensor data, and application metrics. Its NoSQL-based, schemaless design makes it ideal for this purpose. 
+InfluxDB is a **time-series database (TSDB)**, an open-source database optimized for fast and efficient storage and retrieval of data over time. It is used for real-time data management in various fields, including operational monitoring, Internet of Things (IoT) sensor data, and application metrics. Its NoSQL-based, schemaless design makes it ideal for this purpose. <br>
+
+Below is the simplest example and it is a query that can be thrown in Influx DB web or Grafana.
 
 ![influxdb2.png](../assets/influxdb2.png)
 
