--- a/_posts/2025-01-25-doc_gen.md
+++ b/_posts/2025-01-25-doc_gen.md
@@ -70,7 +70,8 @@ SELECT * FROM table(apTableEval(
     VM(fixed_column+col, target_row_no+row_start,target_row_no+row_end
 ```        
 
-
+## ✅ GUI
+<img src="../assets/MergeAndSplit.png" >
 
 
 ## ✅ 후기
