--- a/_posts/2025-01-25-doc_gen.md
+++ b/_posts/2025-01-25-doc_gen.md
@@ -71,6 +71,10 @@ SELECT * FROM table(apTableEval(
 ```        
 
 ## ✅ GUI
+
+다음의 웹 화면을 간단하게 구성해 보면, 동적으로 Merge, Split 을 하고 이를 위의 테이블과 연계하도록 해 볼 수 있겠다.<br>
+이 화면에서 MS Word 표의 스타일을 구성하고, 셀의 크기, 경계 등을 구성하면 MS Word 로 표를 만드는 것보다 빨리 만들 수 있을 것이다. <br>
+
 <img src="../assets/MergeAndSplit.png" >
 
 
