--- a/_posts/2025-01-25-doc_gen.md
+++ b/_posts/2025-01-25-doc_gen.md
@@ -25,6 +25,15 @@ MS Word 문서를 Generation 해야 하는 경우가 있다.  데이터베이스
 
 아래는 위의 디자인에 대한 최종 출력의 모습들이다.  여러가지 포맷으로 가능하다. <br>
 
+## ✅ Sample
+
+아래와 같이 React 웹으로 디자인 했다고 하면
+
+<img src="../assets/WordDesign.png" >
+
+JSON 데이터가 만들어지고 이를 DB 에 템플릿으로 저장하게 된다. 그리고 호출을 하면 외부 테이블의 해당 컬럼이 Expand 되면서 최종 문서가 만들어지게 된다.<br>
+스키마 설계 때문에 중복된 외부 테이블 및 컬럼을 이곳 저곳에 넣어 보았다. <br>
+
 ## ✅ MS Word Generation
 MS Word Generation 은 아래와 같이 되어진다. 위의 Design 과 상응하도록 되어 있다.<br>
 본 백엔드는 FastAPI 로 되어 있으며 표의 병합 등은 Spire-Doc 을 이용한다.
