--- a/_posts/2025-01-25-doc_gen.md
+++ b/_posts/2025-01-25-doc_gen.md
@@ -56,8 +56,8 @@ Spire-Doc 은 HTML 까지도 만들어 준다. 역시 병합, CSS 처리가 MS W
 <img src="../assets/HTML_View.png" >
 
 ## ✅ 후기
-예전에 프로젝트를 할 때 이런 것들에 대한 제안을 한 적이 있었다. 프로토타입을 하였었다.  Report 툴은 Label 이 일정했을 때 가능하지만, 그 당시의 표는
-비정형 표였으며, 상단 또는 좌측 라벨을 기준으로 레코드를 단순히 뿌리는 형태가 아니었다. 따라서 표의 셀(Cell) 에 대한 정보를 가지고 있어야 했다.
+예전에 프로젝트를 할 때 이런 것들에 대한 제안을 한 적이 있었고 프로토타입을 하였었다.  Report 툴은 Label 이 일정했을 때 가능하지만, 그 당시의 표는
+비정형 표였으며, 상단 또는 좌측 라벨을 기준으로 레코드를 단순히 보여주는 단순한 형태가 아니었다. 따라서 표의 셀(Cell) 에 대한 정보를 가지고 있어야 했다.
 <br>
 표를 만들 때 기준이 되는 테이블은 그 테이블의 구조 및 셀의 형식, 병합 셀 정보, 폰트 등의 정보와 매칭되는 여러개의 테이블과의 매핑 정보가 존재해야 할 것이다. <br>
 이것의 핵심은 테이블 디자인이다.  이런 것들은 AI 하 하기가 어렵다. 아직까지는 ... <br>
