--- a/_posts/2025-07-01-bluetooth01.md
+++ b/_posts/2025-07-01-bluetooth01.md
@@ -5,11 +5,11 @@ date: 2025-07-01
 category: Jekyll
 layout: post
 ---
-## ✅ 개요
+### ✅ 개요
 이것은 바이브 코딩으로 얼마나 빨리 만들 수 있느냐 ? 를 테스트 한 것이다. <br>
 This was just a test to see how quickly you can create something with ***Vibe Coding***, and it took about 5 minutes. 
 
-## ✅ Arduino Source - MPU6050 Sensors
+### ✅ Arduino Source - MPU6050 Sensors
 밸런싱 로봇을 강화 학습으로 제어하기 위한 통신 부분이다.
 물론 결과는 실패이다.  그 이유는 당연히 latency 때문이 가장 컷지만 나름 괜찮았다. <br>
 
@@ -64,7 +64,7 @@ void loop(){
   delay(333);
 }
 ```
-## ✅Python Receiver, GUI
+### ✅Python Receiver, GUI
 AI 에게 간단한 UI 있는 Python 을 달라고 했더니 주었다. 
 
 ```
