--- a/_posts/2025-07-19-ROS2_YOLO.md
+++ b/_posts/2025-07-19-ROS2_YOLO.md
@@ -5,14 +5,14 @@ date: 2024-07-19
 category: Jekyll
 layout: post
 ---
-## ✅ Why ?
+### ✅ Why ?
 구형 노트북에는 NVIDIA GTX 1050 등이 있다.  개발용으로 샀지만 너무 무거워서 이제는 들고 다닐 수 없어서 Ubuntu 를 설치했었다.<br>
 NVIDIA 의 젯슨 Nano 의 가격이 좀 되고, 메모리도 사실 적기 때문에 사지 않았다. 차라리 구현 노트북으로 이미지 관련은 추론을 하고<br>
 라즈베리파이에게 전달하는 것이 차라리 나을 듯 싶다. <br>
 구형 노트북의 GPU 메모리로는 LLM 은 절대 못하고 결국 할 수 있는 것은 YOLO 같은 것의 Object Detection 은 어느 정도 할 수 있다고 판단한다.<br>
 다만 카메라가 문제이지만, RSTP 를 지원한다면 이동이 가능하거나 외부에서 무언가를 할 수 있을 듯 싶다. <br>
 
-## ✅ Camera Related Works (Windows)
+### ✅ Camera Related Works (Windows)
 Install mediamtx.exe and ffmpeg.exe<br>
 and run<br>
 
@@ -21,7 +21,7 @@ mediamtx.exe
 ffmpeg -f dshow -i video="Integrated Camera" -video_size 640x400  -vcodec libx264 -rtsp_transport tcp -fflags nobuffer -tune zerolatency -f rtsp rtsp://localhost:8554/live
 ```
 
-## ✅ RTSP Publisher (ROS2, Ubuntu 22.04 LTS based on WSL2)
+### ✅ RTSP Publisher (ROS2, Ubuntu 22.04 LTS based on WSL2)
 Above RTSP Camera Stream Server into ROS2 topic /camera/image_raw or other name. <br>
 
 ```
@@ -76,16 +76,16 @@ source install/setup.bash
 ros2 run rtsp_camera_publisher rtsp_pub
 ```
 
-## ✅ YOLO node (ROS2, Ubuntu 22.04 LTS based on WSL2)
+### ✅ YOLO node (ROS2, Ubuntu 22.04 LTS based on WSL2)
 ```
 ros2 launch yolo_bringup yolov8.launch.py
 ```
 
-## ✅ RealTime Debugging View (ROS2, Ubuntu 22.04 LTS based on WSL2)
+### ✅ RealTime Debugging View (ROS2, Ubuntu 22.04 LTS based on WSL2)
 ```
 ros2 run rqt_image_view rqt_image_view
 ```
-## ✅ Topic to RTSP Streaming (ROS2, Ubuntu 22.04 LTS based on WSL2)
+### ✅ Topic to RTSP Streaming (ROS2, Ubuntu 22.04 LTS based on WSL2)
 Finally, a technique to view or save YOLO's Object Detection Topic remotely by RTST Streaming.
 ```
 # Pre-Installation
