Refactor headings in llama.md for improved clarity
Updated headings from '##' to '###' for better structure.

--- a/_posts/2025-07-20-llama.md
+++ b/_posts/2025-07-20-llama.md
@@ -5,15 +5,15 @@ date: 2025-07-20
 category: Jekyll
 layout: post
 ---
-## ✅ Why ?
+### ✅ Why ?
 Deep 러닝 때문에, NVIDIA RTX 3060 을 사두었다.  다행히 12GB 이고 양자화된 LLM 모델 정도는 올릴 수 있어서 시작한 것이다. <br>
 While commercial tools like ChatGPT and Copilot offer significant benefits, security concerns, especially when they contain confidential information, make them unsafe to use. Even with the RAG threat...<br>
 For fine tuning, llama.cpp is needed to quantize or transform the model.<br>
 This is especially true when using the GPU on your desktop at home rather than the GPU in CoLab.<br>
 
-## ✅ On Ubuntu 22.04 LTS
+### ✅ On Ubuntu 22.04 LTS
 
-## ✅ Preparation
+### ✅ Preparation
 ```
 ### ubuntu update error
 sudo rm -rf /var/lib/apt/lists/*
@@ -58,7 +58,7 @@ nvidia-smi
 ```
 
 
-## ✅ LLama build
+### ✅ LLama build
 ```
 git clone https://github.com/ggerganov/llama.cpp.git
 cd llama.cpp
@@ -73,7 +73,7 @@ cd ..
 
 ```
 
-## ✅ RUN LLama
+### ✅ RUN LLama
 ```
 ./build/bin/llama-server   -m ./models/Meta-Llama-3.1-8B-Instruct-Q4_K_M.gguf   --port 8080   --host 0.0.0.0   --threads $(nproc)   --n-gpu-layers 35
 ```
