Fix image paths in OPC-UA documentation
Updated image paths in the OPC-UA documentation to point to the correct directory.

--- a/_posts/2024-07-02-opcua.md
+++ b/_posts/2024-07-02-opcua.md
@@ -15,7 +15,7 @@ the commercial Prosys Java SDK was used.<br>
 It uses its own framework based on Pure Java, and uses commercial products for the PLC communication part.<br>
 (contact : gracesjy@naver.com)
 
-![OPCUA02.png](../assets/OPCUA01.png)
+![OPCUA02.png](../assets/images/OPCUA01.png)
 
 ### ✅ OPC-UA Built-In Embedded BOX
 OPC-UA Server can have multi-session with equipment such as PLC and can communicate with products from most PLC companies. 
@@ -23,7 +23,7 @@ OPC-UA Manager is web-based and supports the OPC-UA protocol in the form of REST
 Once the PLC address map is provided, it can be immediately converted to XML and brought up to speed within an hour or two.<br>
 It can also be tested by providing the image created with Docker, and can be started in the cloud if not via serial communication.
 
-<img src="../assets/OPCUA02.png">
+<img src="../assets/images/OPCUA02.png">
 
 ### ✅ Supported PLCs
 The supported PLCs are as follows:
@@ -54,29 +54,29 @@ Rather, it is necessary to classify and bind many parameters related to the devi
 ### ✅ Data Dictionary
 Structures such as Recipe are defined separately and simplified. This part is a bit tricky because it connects with everything.
 
-![OPCUA_DataDictionary.png](../assets/OPCUA_DataDictionary.png)
+![OPCUA_DataDictionary.png](../assets/images/OPCUA_DataDictionary.png)
 
 ### ✅ Data Access
 This function puts a lot of load on the BOX. This is because of real-time communication with the actual equipment, 
 and the more the number called "Tag", the more load is given to the OS of the BOX.
 (performance : 3,000 tags under 200ms with JAVA GC)
 
-![OPCUA_DA.png](../assets/OPCUA_DA.png)
+![OPCUA_DA.png](../assets/images/OPCUA_DA.png)
 
 ### ✅ Alarm and Conditions
 As a OPC-UA Client, UaExpert 3 Tabs, Events (including ALARMs), ALARMs, Event History (including ALARMs History)
 
-![OPCUA_ALARM_AND_CONDITIONS.png](../assets/OPCUA_ALARM_AND_CONDITIONS.png)
+![OPCUA_ALARM_AND_CONDITIONS.png](../assets/images/OPCUA_ALARM_AND_CONDITIONS.png)
 
 ### ✅ Event/Alarm History
 Using Event History Tab in UaExpert, You can see all alarms and events.   
 OPC-UA servers contains this history in memory. (max limit : 10,000 - depends on configurations, and rotational memory management.)
 
-![OPCUA_HISTORY.png](../assets/OPCUA_HISTORY.png)
+![OPCUA_HISTORY.png](../assets/images/OPCUA_HISTORY.png)
 
 ### ✅ Historical Access
 
-![OPCUA_HISTORYACCESS.png](../assets/OPCUA_HISTORYACCESS.png)
+![OPCUA_HISTORYACCESS.png](../assets/images/OPCUA_HISTORYACCESS.png)
 
 ### ✅ OPC-UA Manager for REST API Client
 OPC-UA Manager is provided for OPC-UA monitoring and configuration, and is based on Spring Boot + Vue.js, <br>
@@ -124,7 +124,7 @@ print (data_response.json())
 
 ### ✅ OPC-UA, Monitoring using Grafana
 Utilizing the datasource plugin framework, this projects allows you to access data from OPC UA servers directly from Grafana.
-![OPCUA_HISTORYACCESS.png](../assets/GRAFANA.png)
+![OPCUA_HISTORYACCESS.png](../assets/images/GRAFANA.png)
 
 ### ✅ Grafana + Telegraf + WS(WebSocket)
 Grafana Plugin Build for OPC-UA, dotnet-sdk needed.
@@ -257,7 +257,7 @@ InfluxDB is a **time-series database (TSDB)**, an open-source database optimized
 
 Below is the simplest example and it is a query that can be thrown in Influx DB web or Grafana.
 
-![influxdb2.png](../assets/influxdb2.png)
+![influxdb2.png](../assets/images/influxdb2.png)
 
 ```
 from(bucket: "mybucket")
