Fix image paths in doc_gen.md
Updated image paths in the documentation to reflect the correct directory structure.

--- a/_posts/2025-01-25-doc_gen.md
+++ b/_posts/2025-01-25-doc_gen.md
@@ -21,7 +21,7 @@ Vue.js 는 프로젝트로 해 보았지만 React 는 처음이었다. 설명과
 하는 김에 React 를 배워서 해야 했는데 여기까지는 어렵지는 않았다.<br>
 오히려 백엔드가 어려웠다. 그 부분은 데이터 설계와 관련이 있어서 AI 가 헷깔려 했고, 거의 도움을 받지 않았다. <br>
 
-<img src="../assets/Basic_Design.png" >
+<img src="../assets/images/Basic_Design.png" >
 
 간단하게 수평, 수직 Merge 버튼이 있다.  폰트나 셀의 길이 등은 나중에 하기로 하고 지금의 목표는 병합이었고 스키마 설계와 외부 테이블들의 데이터를 효과적으로 셀에 넣기 위한 것이다. <br>
 외부 테이블 데이터는 {TableName.columnName} 으로 넣으면 되고 현재에는 동일한 Context 로 해당 Row 들이 표에 수직의 경우 넣어진다.<br>
@@ -33,7 +33,7 @@ Vue.js 는 프로젝트로 해 보았지만 React 는 처음이었다. 설명과
 
 아래와 같이 React 웹으로 디자인 했다고 하면
 
-<img src="../assets/WordDesign.png" >
+<img src="../assets/images/WordDesign.png" >
 
 JSON 데이터가 만들어지고 이를 DB 에 템플릿으로 저장하게 된다. 그리고 호출을 하면 외부 테이블의 해당 컬럼이 Expand 되면서 최종 문서가 만들어지게 된다.<br>
 스키마 설계 때문에 중복된 외부 테이블 및 컬럼을 이곳 저곳에 넣어 보았다. <br>
@@ -42,18 +42,18 @@ JSON 데이터가 만들어지고 이를 DB 에 템플릿으로 저장하게 된
 MS Word Generation 은 아래와 같이 되어진다. 위의 Design 과 상응하도록 되어 있다.<br>
 본 백엔드는 FastAPI 로 되어 있으며 표의 병합 등은 Spire-Doc 을 이용한다.
 
-<img src="../assets/WordGen.png" >
+<img src="../assets/images/WordGen.png" >
 
 ### ✅ PDF Generation
 
 Spire-Doc 으로 Generation 될 수 있으며 아래와 같다.
-<img src="../assets/PDFGen.png" >
+<img src="../assets/images/PDFGen.png" >
 
 
 ### ✅ HTML Preview
 
 Spire-Doc 은 HTML 까지도 만들어 준다. 역시 병합, CSS 처리가 MS Word 와 동일하다.
-<img src="../assets/HTML_View.png" >
+<img src="../assets/images/HTML_View.png" >
 
 ### ✅ 후기
 예전에 프로젝트를 할 때 이런 것들에 대한 제안을 한 적이 있었고 프로토타입을 하였었다.  Report 툴은 Label 이 일정했을 때 가능하지만, 그 당시의 표는
