Fix image source for Sequence Diagram in SD.md
Updated image source path for Sequence Diagram.

--- a/_posts/2025-10-01-SD.md
+++ b/_posts/2025-10-01-SD.md
@@ -18,7 +18,7 @@ UML 도 그러하고, 제조 쪽에서는 시퀀스 다이어그램(Sequence Dia
 이 소스는 Copilot 과 ChatGPT 의 도움을 많이 받았다.  다만 데이터 구성 등은 직접 설계 하였지만 큰 어려움은 없었으며 예전에 JAVA 로 많은 구현을 했었고 Python 과 Vue.js 관련 프로젝트를 해 보았기 때문에, React 프론트엔드, FastAPI 백엔드로 금방 구현이 가능했다.  정확하게 2시간 남짓 걸렸다.<br>
 SVG 는 2개를 만드는데, 하나는 출력을 위한 것이다.  Scroll 시에 Node 가 사라지면 안되기 때문에 노드는 iframe 구성을 한 것이지만, 출력(Save)할 때는 모두 한꺼번에 나타나면 된다. <br>
 
-<img src="../assets/SequenceDiagram.png" >
+<img src="../assets/images/SequenceDiagram.png" >
 
 ### ✅ 후기
 
