--- a/_posts/2025-07-19-ROS2_YOLO.md
+++ b/_posts/2025-07-19-ROS2_YOLO.md
@@ -37,7 +37,7 @@ class RTSPPublisher(Node):
         self.publisher_ = self.create_publisher(Image, 'camera/image_raw', 10)
         self.bridge = CvBridge()
 
-        # OpenCV RTSP 캡처
+        # OpenCV RTSP 
         self.cap = cv2.VideoCapture(self.rtsp_url)
         if not self.cap.isOpened():
             self.get_logger().error("❌ RTSP cannot open !")
