--- a/_posts/2025-12-11-bppt.md
+++ b/_posts/2025-12-11-bppt.md
@@ -7,7 +7,7 @@ layout: post
 ---
 
 ## BPPT Controller
-This is an app for making Power Point presentations on your smartphone.  The PC Manager and Android app communicate via Bluetooth and have the ability to open Power Point documents in a specific folder with the Android app, control the mouse, and move pages.
+This Android app helps you deliver PowerPoint presentations from your smartphone. The PC Manager and Android app communicate via Bluetooth, allowing you to open PowerPoint documents in specific folders, control the mouse, and navigate pages. This app is a bit plain and clunky, but I made it. ^^;;
 
 <img src="../assets/images/BPPT_MAIN.jpg">
 
