--- a/_posts/2025-12-11-bppt.md
+++ b/_posts/2025-12-11-bppt.md
@@ -34,3 +34,11 @@ Moving forward and backward on the page is implemented with gestures, so you can
 ## End of Presentation
 When the presentation is over, pressing the back or close menu will automatically close the slide mode of the PowerPoint presentation, and the document will automatically close, causing PowerPoint to automatically exit. <br>
 You will be taken back to the list of folders and document files.
+
+## Download
+For More, refer to below document. 
+https://github.com/gracesjy/hp/blob/master/Release/SlideMate_Simple_Manual.pdf
+### Android
+https://github.com/gracesjy/hp/blob/master/Release/app-slidemate.apk
+### PC (Windows 10/11)
+https://github.com/gracesjy/hp/blob/master/Release/SliteMatePC_Companion/BluetoothManagerSetup.exe
