--- a/_posts/2025-12-11-bppt.md
+++ b/_posts/2025-12-11-bppt.md
@@ -1,12 +1,12 @@
 ---
-title: BPPT Controller
+title: SlideMate Download
 author: Raymond
 date: 2025-12-11
 category: Jekyll
 layout: post
 ---
 
-## BPPT Controller
+## SlideMate: Presentation Helper
 This Android app helps you deliver PowerPoint presentations from your smartphone. The PC Manager and Android app communicate via Bluetooth, allowing you to open PowerPoint documents in specific folders, control the mouse, and navigate pages. This app is a bit plain and clunky, but I made it. ^^;;
 
 <img src="../assets/images/BPPT_MAIN.jpg">
