--- a/_posts/2025-12-11-bppt.md
+++ b/_posts/2025-12-11-bppt.md
@@ -7,12 +7,14 @@ layout: post
 ---
 
 ## SlideMate: Presentation Helper
-This Android app helps you deliver PowerPoint presentations from your smartphone. The PC Manager and Android app communicate via Bluetooth, allowing you to open PowerPoint documents in specific folders, control the mouse, and navigate pages. This app is a bit plain and clunky, but I made it. ^^;;
+This Android app helps you deliver PowerPoint presentations from your smartphone. The PC Manager and Android app communicate via Bluetooth, allowing you to open PowerPoint documents in specific folders, control the mouse, and navigate pages. This app has the inconvenience of installing PC Companion, which is unavoidable.
 
 <img src="../assets/images/BPPT_MAIN.jpg">
 
 ## PC Side Manager
-The PC-side Manager plays a practical role in pairing nearby Bluetooth devices and controlling PowerPoint. It also transmits the current document page and the presenter's annotations from the PowerPoint Add-In to the Android app.
+"AOKY BT Manager", The PC-side Manager plays a practical role in pairing nearby Bluetooth devices and controlling PowerPoint. It also transmits the current document page and the presenter's annotations from the PowerPoint Add-In to the Android app.
+   
+Pairing your Android device with your PC can be done without using these apps, using the Bluetooth utility provided by Windows or Android. This makes setup easier.
 
 <img src="../assets/images/BPPT_Manager.png">
 
