--- a/_posts/2025-12-11-bppt.md
+++ b/_posts/2025-12-11-bppt.md
@@ -39,8 +39,10 @@ You will be taken back to the list of folders and document files.
 
 ## Download
 For More, refer to below document. 
-https://github.com/gracesjy/hp/blob/master/Release/SlideMate_Simple_Manual.pdf
+[Manual](https://github.com/gracesjy/hp/blob/master/Release/SlideMate_Simple_Manual.pdf)
+
 ### Android
-https://github.com/gracesjy/hp/blob/master/Release/app-slidemate.apk
+[Android App Download](https://github.com/gracesjy/hp/blob/master/Release/app-slidemate.apk)
 ### PC (Windows 10/11)
-https://github.com/gracesjy/hp/blob/master/Release/SliteMatePC_Companion/BluetoothManagerSetup.exe
+[PC Companion Download](
+https://github.com/gracesjy/hp/blob/master/Release/SliteMatePC_Companion/BluetoothManagerSetup.exe)
