--- a/_posts/2025-12-11-bppt.md
+++ b/_posts/2025-12-11-bppt.md
@@ -9,7 +9,7 @@ layout: post
 ## SlideMate: Presentation Helper
 This Android app helps you deliver PowerPoint presentations from your smartphone. The PC Manager and Android app communicate via Bluetooth, allowing you to open PowerPoint documents in specific folders, control the mouse, and navigate pages. This app has the inconvenience of installing PC Companion, which is unavoidable.
 
-<img src="../assets/images/BPPT_MAIN.jpg style=width:50%; height:50%;">
+<img src="../assets/images/BPPT_MAIN.jpg">
 
 ## PC Side Manager
 "AOKY BT Manager", The PC-side Manager plays a practical role in pairing nearby Bluetooth devices and controlling PowerPoint. It also transmits the current document page and the presenter's annotations from the PowerPoint Add-In to the Android app.
@@ -22,7 +22,7 @@ Pairing your Android device with your PC can be done without using these apps, u
 ## File Lists
 When you connect to a registered PC via Bluetooth from the Android main screen, the directory and PowerPoint documents in the specified folder are displayed.
 
-<img src="../assets/images/BPPT_FileLists.jpg style=width:50%; height:50%;">
+<img src="../assets/images/BPPT_FileLists.jpg">
 
 When you select a folder, it shows the usual form of showing the files and folders inside it again.
 
