--- a/_posts/2025-12-11-bppt.md
+++ b/_posts/2025-12-11-bppt.md
@@ -26,8 +26,10 @@ When you connect to a registered PC via Bluetooth from the Android main screen, 
 
 When you select a folder, it shows the usual form of showing the files and folders inside it again.
 
-## Presentation Mode
+## Presentation Mode(Slide Mode)
 Once you select a PowerPoint document to present, you'll enter presentation mode, and the file will automatically switch to slide mode. You can change the cursor to a laser pointer through the menu in the Android app.
+   
+The Power Point VSTO Add-In that allows you to view the notes on the presenter's screen in PPT's Slide Mode as an Android app is installed together with PC Companion Manager.
 
 <img src="../assets/images/BPPT_PRESENTATION.jpg">
 
